# agent-kanban-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.example.json  kanban-blocked-watchdog.service  kanban-blocked-watchdog.timer
src/agent_kanban_monitor/: __init__.py  blocked_watchdog.py
tests/: test_blocked_watchdog.py
